# minetest-luajit

src/: CMakeLists.txt
src/luaJIT/: CMakeLists.txt
src/luaJIT/src/host/: buildvm_arch.h
